tests/samples/invalid/constant_confusion.pn

const X: i32 = 100;
const X: i32 = 200;
const Y: i32 = X;
